# surakarta-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  libck.cmake  mcts.h
games/: CMakeLists.txt  connect_four.cpp  connect_four.h  constant.h  fifo.h  hash.h  helper.h  mcts.h  play.cc  play_net.cc  policy_value_model.cc  policy_value_model.h  select  surakarta.cc  surakarta.cpp  surakarta.h  train.cc
surakarta_client/: .gitignore  README.md  cmd.py  main.py  test.py
surakarta_client/application/: application.py
surakarta_client/application/controller/: game_controller.py
surakarta_client/application/view/: chess_button.py  game_view.py  main_window.py  target_button.py
surakarta_client/fortytwo/: core.py
surakarta_client/surakarta/: chess.py  game.py  play_manager.py
